--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             "notes/section1.md"
         ];
 
-        const vaultPath = "./D207-Lore/"; // Base path to your GitHub Pages
+        const vaultPath = "./Detachment207-Lore/D207-Lore/"; // Base path to your GitHub Pages
 
         // Dynamically list Markdown files
         function listFiles() {
