--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <script>
         // List of Markdown files in your GitHub Pages repository
         const files = [
-            "Welcome.md",
-            "example2.md",
+            "D207-Lore/Welcome.md",
+            "D207-Lore/Mission Makers.md",
             "notes/section1.md"
         ];
 
-        const vaultPath = "./Detachment207-Lore/D207-Lore/"; // Base path to your GitHub Pages
+        const vaultPath = "./"; // Base path to your GitHub Pages
 
         // Dynamically list Markdown files
         function listFiles() {
