--- a/index.html
+++ b/index.html
@@ -32,54 +32,12 @@
     <div id="content">
         <h2>File Content</h2>
         <div id="markdown-content">Select a file to view its content.</div>
+        <ul>
+          <li><a href="/D207-Lore/Mission Makers.md">Mission Makers</a></li>
+          <li><a href="/D207-Lore/Welcome.md">Welcome</a></li>
+        </ul>
     </div>
 
-    <script>
-        // List of Markdown files in your GitHub Pages repository
-        const files = [
-            "D207-Lore/Welcome.md",
-            "D207-Lore/Mission Makers.md",
-            "notes/section1.md"
-        ];
-
-        const vaultPath = "./"; // Base path to your GitHub Pages
-
-        // Dynamically list Markdown files
-        function listFiles() {
-            const fileLinks = document.getElementById('file-links');
-
-            files.forEach(file => {
-                const listItem = document.createElement('li');
-                const link = document.createElement('a');
-                link.textContent = file;
-                link.href = '#';
-                link.onclick = (e) => {
-                    e.preventDefault();
-                    loadFile(file);
-                };
-                listItem.appendChild(link);
-                fileLinks.appendChild(listItem);
-            });
-        }
-
-        // Load and render a Markdown file
-        async function loadFile(fileName) {
-            try {
-                const response = await fetch(`${vaultPath}${fileName}`);
-                if (!response.ok) {
-                    throw new Error(`Failed to fetch ${fileName}: ${response.statusText}`);
-                }
-                const markdown = await response.text();
-                const html = marked(markdown);
-                document.getElementById('markdown-content').innerHTML = html;
-            } catch (error) {
-                console.error('Error loading file:', error);
-                document.getElementById('markdown-content').innerHTML = `<p>Error loading file: ${fileName}</p>`;
-            }
-        }
-
-        // Initialize
-        listFiles();
-    </script>
+    
 </body>
 </html>
