--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <h2>File Content</h2>
         <div id="markdown-content">Select a file to view its content.</div>
         <ul>
-          <li><a href="/D207-Lore/Mission Makers.html">Mission Makers</a></li>
-          <li><a href="/D207-Lore/Welcome.html">Welcome</a></li>
+          <li><a href="/D207-Lore/Mission Makers">Mission Makers</a></li>
+          <li><a href="/D207-Lore/Welcome">Welcome</a></li>
         </ul>
     </div>
 
