--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 ---
-layout: home
-# Index page
+title : Welcome
+feed: show
+date : 22-12-2024
 ---
+
+This is a lore vault for all the Campaign lore submitted to the lore channel on the discord.
+Contact Moonlighter or an Admin if anything is incorrect.
+
+You can start exploring the Vault by first Checking out the [[Mission Makers]].
+
